option('enable-stemming',
       type : 'boolean',
       value : true,
       description : 'Use stemming while searching. Requires Snowball (libstemmer)'
)
option('enable-vapi',
       type : 'boolean',
       value : false,
       description : 'Create and install a Vala API file'
)
option('enable-qt',
       type : 'boolean',
       value : false,
       description : 'Build libappstream-qt'
)
option('enable-docs',
       type : 'boolean',
       value : false,
       description : 'Build documentation for API and specification'
)
option('enable-apidocs',
       type : 'boolean',
       value : true,
       description : 'Build API documentation (automatically enabled when "enable-docs" is passed)'
)
option('enable-apt-support',
       type : 'boolean',
       value : false,
       description : 'Enable integration with APT on Debian'
)

#
# For development
#
option('enable-maintainer',
       type : 'boolean',
       value : false,
       description : 'Enable maintainer mode (use strict compiler flags, e.g. -Werror)'
)
